# prism

./: .gitmodules  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  cmake_install.cmake  prism
sdk/: README
src/: main.cpp
system/: README
system/main_menu/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main_menu.elf
system/main_menu/src/: main.cpp
